fix menu stacking on mobile on chrome
close menu on item click

--- a/app/assets/stylesheets/components/_main-menu.scss
+++ b/app/assets/stylesheets/components/_main-menu.scss
@@ -187,6 +187,7 @@
 
   &.open &__nav {
     display: flex;
+    flex-basis: unset;
     align-items: center;
     width: 100%;
 
